--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -10,8 +10,7 @@
 ul{
     list-style: none;
 }
-table,
-td {
+table{
     border: 1px solid #333;
 }
 
@@ -24,21 +23,44 @@ table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
-
+    padding-left: 10%;
+    padding-right: 10%;
 
 }
-td, th {
-    border: 1px solid #000000;
-    text-align: left;
-    padding: 8px;
-    
-}
+
 tr{
     width: 100%;
+    height: 40px;
+    text-align: center;
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around; 
+    align-content: center;
+    justify-content: space-between; 
 }
+.col1{
+    flex-basis: 20%;
+}
+.col2{
+    flex-basis: 10%;
+}
+.col3{
+    flex-basis: 10%;
+}
+.col4{
+    flex-basis: 10%;
+}
+.col5{
+    flex-basis: 20%;
+}
+.col6{
+    flex-basis: 10%;
+}
+.col7{
+    flex-basis: 10%;
+}
+
+
+
 
 
 .button-add-movie{
@@ -59,3 +81,9 @@ div{
     width: 100%;
 
 }
+
+
+
+
+
+
