--- a/src/HomePage/HomePage.css
+++ b/src/HomePage/HomePage.css
@@ -66,7 +66,8 @@ tr{
 .button-add-movie{
     height: 40px;
     width: 60%;
-    margin: 50px 0%;
+    margin: 20px 0%;
+    margin-top: 50px;
     background-color: teal;
     color: white;
     font-size: 15px;
